--- a/reports/report.html
+++ b/reports/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,8732],[[4,5,6,0,[],[0,73,8627],[],[[7,0,1,0,[8],[0,442,8253,9],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,18457],[[4,5,6,0,[],[0,23,18430],[],[[7,0,1,0,[8],[0,255,18190,9],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestCases","*D:\\VS_Code_Moolya\\RoboTesting\\TestCases","*../TestCases","*TestCase1","*D:\\VS_Code_Moolya\\RoboTesting\\TestCases\\TestCase1.robot","*../TestCases/TestCase1.robot","*User should be able to land on Google Page","*demo","*No keyword with name 'sleep 3s' found. Did you mean:\n    BuiltIn.Sleep"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestCases","*D:\\VS_Code_Moolya\\RoboTesting\\TestCases","*../TestCases","*TestCase1","*D:\\VS_Code_Moolya\\RoboTesting\\TestCases\\TestCase1.robot","*../TestCases/TestCase1.robot","*User should be able to land on Google Page","*demo","*Element with locator 'xpath=//div/a[.='realme Watch S']' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:08","fail":1,"label":"demo","pass":0}],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"TestCases","name":"TestCases","pass":0},{"elapsed":"00:00:09","fail":1,"id":"s1-s1","label":"TestCases.TestCase1","name":"TestCase1","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:18","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:18","fail":1,"label":"demo","pass":0}],[{"elapsed":"00:00:18","fail":1,"id":"s1","label":"TestCases","name":"TestCases","pass":0},{"elapsed":"00:00:18","fail":1,"id":"s1-s1","label":"TestCases.TestCase1","name":"TestCase1","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1610027198500;
+window.output["baseMillis"] = 1610706287706;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8796;
+window.output["generated"] = 18478;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
