--- a/reports/log.html
+++ b/reports/log.html
@@ -1750,25 +1750,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,8732],[[4,5,6,0,[],[0,73,8627],[],[[7,0,1,0,[8],[0,442,8253,9],[[0,10,11,0,0,0,0,0,[0,442,8251],[[0,12,13,0,14,15,0,0,[1,442,6004],[],[[442,2,16]]],[0,17,13,0,18,0,0,0,[1,6446,2239],[],[]],[0,19,0,0,0,0,0,0,[0,8693,0],[],[[8693,5,9]]]],[]]]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,18457],[[4,5,6,0,[],[0,23,18430],[],[[7,0,1,0,[8],[0,255,18190,9],[[0,10,11,0,0,0,0,0,[1,256,11980],[[0,12,13,0,14,15,0,0,[1,257,7812],[],[[257,2,16]]],[0,17,13,0,18,0,0,0,[1,8069,2163],[],[]],[0,19,20,0,21,22,0,0,[1,10232,2003],[],[[12235,2,23]]]],[]],[0,24,11,0,0,0,0,0,[1,12238,2797],[[0,19,20,0,21,22,0,0,[1,12239,2000],[],[[14239,2,23]]],[0,25,13,0,26,27,0,0,[1,14240,119],[],[[14240,2,28]]],[0,29,13,0,30,31,0,0,[1,14359,305],[],[]],[0,32,13,0,33,34,0,0,[1,14664,160],[],[[14665,2,35]]],[0,32,13,0,33,36,0,0,[1,14824,133],[],[[14825,2,37]]],[0,25,13,0,26,38,0,0,[1,14957,73],[],[[14957,2,39]]],[0,40,20,0,41,42,0,0,[1,15031,4],[],[]]],[]],[0,43,11,0,0,0,0,0,[0,15036,3408],[[0,19,20,0,21,44,0,0,[1,15036,3002],[],[[18038,2,45]]],[0,46,13,0,47,48,49,0,[0,18039,405],[[0,50,13,0,51,0,0,0,[1,18079,363],[],[[18442,2,52]]]],[[18444,5,9]]]],[]]]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestCases","*D:\\VS_Code_Moolya\\RoboTesting\\TestCases","*../TestCases","*TestCase1","*D:\\VS_Code_Moolya\\RoboTesting\\TestCases\\TestCase1.robot","*../TestCases/TestCase1.robot","*User should be able to land on Google Page","*demo","*No keyword with name 'sleep 3s' found. Did you mean:\n    BuiltIn.Sleep","*Open Google Browser","*instructions","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${brows}","*Opening browser 'gc' to base url '<a href=\"https://www.google.co.in/\">https://www.google.co.in/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*sleep 3s"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestCases","*D:\\VS_Code_Moolya\\RoboTesting\\TestCases","*../TestCases","*TestCase1","*D:\\VS_Code_Moolya\\RoboTesting\\TestCases\\TestCase1.robot","*../TestCases/TestCase1.robot","*User should be able to land on Google Page","*demo","*Element with locator 'xpath=//div/a[.='realme Watch S']' not found.","*Open Google Browser","*instructions","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${url}, ${brows}","*Opening browser 'gc' to base url '<a href=\"https://www.flipkart.com/viewcart\">https://www.flipkart.com/viewcart\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2s","*Slept 2 seconds","*Search for robotframework","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${login}","*Clicking element 'xpath=//button[@class='_2KpZ6l _1sbqEe _3AWRsL']'.","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${un}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${un}, ${mob}","*Typing text '7892188036' into text field '//div/input[@class='_2IX_2- VJZDxU']'.","*${pwd}, ${pass}","*Typing text 'Moolya@2021' into text field '//div/input[@class='_2IX_2- _3mctLh VJZDxU']'.","*${login2}","*Clicking element 'xpath=(//button[@type='submit'])[2]'.","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*Step 2 done","*Check the product","*3s","*Slept 3 seconds","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*${act}","*${actual}","*Capture Page Screenshot","*<p>Takes a screenshot of the current page and embeds it into a log file.\x3c/p>","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-13.png\"><img src=\"selenium-screenshot-13.png\" width=\"800px\">\x3c/a>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:08","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:08","fail":1,"label":"demo","pass":0}],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"TestCases","name":"TestCases","pass":0},{"elapsed":"00:00:09","fail":1,"id":"s1-s1","label":"TestCases.TestCase1","name":"TestCase1","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:18","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:18","fail":1,"label":"demo","pass":0}],[{"elapsed":"00:00:18","fail":1,"id":"s1","label":"TestCases","name":"TestCases","pass":0},{"elapsed":"00:00:18","fail":1,"id":"s1-s1","label":"TestCases.TestCase1","name":"TestCase1","pass":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1610027198500;
+window.output["baseMillis"] = 1610706287706;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8796;
+window.output["generated"] = 18478;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
